--- a/client/src/components/Button/Button.css
+++ b/client/src/components/Button/Button.css
@@ -15,8 +15,7 @@
   background: #2d63ec;
 }
 
-.button:hover,
-.button:focus {
+.button:hover {
   background: #f2f6ff;
 }
 
@@ -29,8 +28,7 @@
   background-color: #e6e6e6;
 }
 
-.button:hover .buttonText,
-.button:focus .buttonText {
+.button:hover .buttonText {
   color: #2d63ec;
 }
 
